fix modal height, add overflow

--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -3,13 +3,14 @@
 }
 
 .modal {
-  width: 90%;
+  height: 90%;
   background-color: $primary-color-white;
   position: relative;
   z-index: 999;
   border-radius: 10px;
   padding: 24px 12px;
   max-width: 280px;
+  overflow-y: auto;
 
   @include tablet {
     max-width: 704px;
